[FEATURE-4282] Fixeado errores sonarqube del commit actual